<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:key="settings">
    <com.wireguard.android.preference.VersionPreference
        android:icon="@mipmap/ic_launcher"
        android:key="version"
        android:layout="@layout/rabbit_preference" />
    <Preference
        android:key="app_update"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summary="@string/app_update_summary"
        android:title="@string/app_update_title" />
    <Preference
        android:key="power_settings"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summary="@string/power_settings_summary"
        android:title="@string/power_settings_title" />
    <Preference
        android:key="subscription_settings"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summary="@string/subscription_settings_summary"
        android:title="@string/subscription_settings_title" />
    <Preference
        android:key="routing_settings"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summary="@string/routing_settings_summary"
        android:title="@string/routing_settings_title" />
    <Preference
        android:key="sharing_settings"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summary="@string/sharing_settings_summary"
        android:title="@string/sharing_settings_title" />
    <Preference
        android:key="log_viewer"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summary="@string/log_viewer_pref_summary"
        android:title="@string/log_viewer_pref_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="detailed_diagnostics"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summaryOff="@string/detailed_diagnostics_summary_off"
        android:summaryOn="@string/detailed_diagnostics_summary_on"
        android:title="@string/detailed_diagnostics_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="optional_turn_udp"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summaryOff="@string/optional_turn_udp_summary_off"
        android:summaryOn="@string/optional_turn_udp_summary_on"
        android:title="@string/optional_turn_udp_title" />
    <com.wireguard.android.preference.QuickTilePreference
        android:key="quick_tile"
        android:layout="@layout/rabbit_preference"
        tools:targetApi="33" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="restore_on_boot"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summaryOff="@string/restore_on_boot_summary_off"
        android:summaryOn="@string/restore_on_boot_summary_on"
        android:title="@string/restore_on_boot_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="dark_theme"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summaryOff="@string/dark_theme_summary_off"
        android:summaryOn="@string/dark_theme_summary_on"
        android:title="@string/dark_theme_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="multiple_tunnels"
        android:layout="@layout/rabbit_preference"
        android:singleLineTitle="false"
        android:summaryOff="@string/multiple_tunnels_summary_off"
        android:summaryOn="@string/multiple_tunnels_summary_on"
        android:title="@string/multiple_tunnels_title" />
    <com.wireguard.android.preference.ToolsInstallerPreference
        android:key="tools_installer"
        android:layout="@layout/rabbit_preference" />
    <com.wireguard.android.preference.KernelModuleEnablerPreference
        android:key="kernel_module_enabler"
        android:layout="@layout/rabbit_preference" />
    <com.wireguard.android.preference.ZipExporterPreference
        android:key="zip_exporter"
        android:layout="@layout/rabbit_preference" />
</androidx.preference.PreferenceScreen>
